[project]
name = "space-missions-dashboard"
version = "1.0.0"
description = "Interactive dashboard for exploring and analyzing historical space mission data"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["src"]
